<?xml version="1.0"?>
<package>
  <name>c3p_voxelmap</name>
  <version>1.0.0</version>

  <description>
   C3P-VoxelMap is a probabilistic voxel mapping method based on VoxelMap,
   enhancing performance, accuracy, and memory efficiency in LiDAR odometry.
  </description>

  <maintainer email="xu.yang@deptrum.com">Xu Yang</maintainer>

  <license>BSD</license>

  <author email="xu.yang@deptrum.com">Xu Yang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>livox_ros_driver</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
